# hackathon-aws-cloudspyglass

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  nginx.conf  supervisord.conf
backend/: Dockerfile.dev  dependencies.py  exceptions.py  main.py  pyproject.toml
backend/models/: __init__.py  credentials.py  diagram.py  errors.py  export.py  filters.py  hierarchy.py  resources.py  scan.py  settings.py
backend/routes/: credentials.py  diagrams.py  export.py  filters.py  images.py  scan.py  settings.py
backend/services/: credential_manager.py  export_service.py  filter_engine.py  hierarchy_builder.py  icon_resolver.py  relationship_resolver.py  scan_storage.py  scanner.py
backend/tests/: test_credential_manager.py  test_credential_routes.py  test_diagrams_route.py  test_export_route.py  test_export_service.py  test_filter_diagram_routes.py  test_hierarchy_builder.py  test_hierarchy_builder_properties.py  test_icon_resolver.py  test_images_route.py  test_integration.py  test_property_combined_filter_intersection.py  test_property_corrupt_file_handling.py  test_property_credential_error_categorization.py  test_property_credential_replacement.py  test_property_credential_validation.py  test_property_error_recoverability_classification.py  test_property_error_response_structure.py  test_property_event_relationships.py  test_property_exponential_backoff.py  test_property_export_filename_format.py  test_property_export_size_limit.py  test_property_external_classification.py  test_property_filter_removal_round_trip.py  (+19 more)
(+99 files in other folders)
