[project]
name = "cloudspyglass-backend"
version = "0.1.0"
description = "CloudSpyglass - AWS Infrastructure Visualization Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "boto3>=1.35.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.112.0",
    "moto[all]>=5.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["models*", "services*", "routes*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
